[package]
name = "raytrace-point-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
nalgebra = { version="0.33.0", features=["convert-bytemuck"] }
noise = "0.9.0"
partition = "0.1.2"
ply-rs = "0.1.3"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version="1.0.210", features=["derive"] }
serde_json = "1.0.128"
statrs = "0.17.1"
threadpool = "1.8.1"
vulkano = "0.34.1"
vulkano-shaders = { version="0.34.0", features=["shaderc-build-from-source", "shaderc-debug"]}
vulkano-win = "0.34.0"
winit = "0.28"
